--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,13 +4,13 @@
 <html lang="en">
   <head>
     <% include ../partials/head %>
-  </head>
+  </hea0d>
   <body class="container">
     <header>
       <% include ../partials/header %>
     </header>
 
-    <main>
+    <main>  
       <div class="jumbotron">
         <h1>This is great</h1>
         <p>Welcome to templating using EJS</p>
